code clean up and minor fixes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Here's a closer look at the tools and tecs I'm currently using to bring to life 
             <p class="footer-subtitle">send me a message! Or drop your thoughts:</p>
     
             <div class="footer-cta">
-                <a href="ed320819@gmail.com" class="cta-button">Send a Message</a>
+                <a class="cta-button">Send a Message</a>
 
                 <div class="social-links">
                     <a class="social-icon">ed320819@gmail.com </a>
