--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduardo Dourado | Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32'><text x='0' y='20' font-size='20' font-family='Arial' fill='black'>❍</text></svg>" />
+    <title>efdourado | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32'><text x='0' y='26' font-size='32' font-family='Arial' fill='black'>❍</text></svg>" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -57,7 +57,9 @@ A collection of my most exciting and key projects, showcasing my skills and effi
         <div class="project-grid">
             <article class="project-card">
                 <div class="project-image">
-                    <div class="placeholder-image"></div>
+                    <div class="placeholder-image">
+
+                    </div>
                     <div class="project-overlay">
                         <div class="tech-stack">
                             <span>Prisma</span>
@@ -77,7 +79,10 @@ Stremline your orders, browse, and receive updates effortlessly
 
             <article class="project-card">
                 <div class="project-image">
-                    <div class="placeholder-image"></div>
+                    <div class="placeholder-image">
+
+
+                    </div>
                     <div class="project-overlay">
                         <div class="tech-stack">
                             <span>MongoDB</span>
@@ -95,7 +100,10 @@ Stremline your orders, browse, and receive updates effortlessly
 
             <article class="project-card">
                 <div class="project-image">
-                    <div class="placeholder-image"></div>
+                    <div class="placeholder-image">
+
+
+                    </div>
                     <div class="project-overlay">
                         <div class="tech-stack">
                             <span>—</span>
@@ -139,13 +147,7 @@ Here's a closer look at the tools and tecs I'm currently using to bring to life 
             <p class="footer-subtitle">send me a message! Or drop your thoughts:</p>
     
             <div class="footer-cta">
-                <a class="cta-button">Send a Message</a>
-
-                <div class="social-links">
-                    <a class="social-icon">ed320819@gmail.com </a>
-                    <a class="social-icon"> || </a>
-                    <a class="social-icon"> 61 9 9965 3131</a>
-                </div>
+                <a href="mailto:ed320819@gmail.com?subject=Msg%20from%20ur%20Portfolio&body=Hello%20Eduardo,%20" class="cta-button">Send a Message</a>
             </div>
 
             <div class="color-palette">
