code clean up and minor fixes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 a full-stack developer also really interested in AI and data. I'm focus on efficiency and seek a positive environment for everyone!
             </p>
             <div class="hero-cta">
-                <a href="#work" class="cta-button">Selected Projects</a>
+                <a href="#showcase" class="cta-button">Selected Projects</a>
                 <div class="social-links">
                     <a href="https://github.com/efdourado" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://instagram.com/efdourado" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -147,7 +147,7 @@ Here's a closer look at the tools and tecs I'm currently using to bring to life 
             <p class="footer-subtitle">send me a message! Or drop your thoughts:</p>
     
             <div class="footer-cta">
-                <a href="mailto:ed320819@gmail.com?subject=Msg%20from%20ur%20Portfolio&body=Hello%20Eduardo,%20" class="cta-button">Send a Message</a>
+                <a href="mailto:ed320819@gmail.com?subject=Msg%20from%20ur%20Portfolio&body=👋👋%0A%0A" class="cta-button">Send a Message</a>
             </div>
 
             <div class="color-palette">
