code clean up and minor fixes

--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@ a full-stack developer also really interested in AI and data. I'm focus on effic
             <div class="hero-cta">
                 <a href="#showcase" class="cta-button">Selected Projects</a>
                 <div class="social-links">
-                    <a href="https://github.com/efdourado" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://instagram.com/efdourado" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/efdourado" class="social-icon" target="_blank"
+                        onclick="event.preventDefault(); window.location.href='github://user?username=efdourado'; setTimeout(() => { window.open('https://github.com/efdourado', '_blank'); }, 1000);">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://intagram.com/efdourado" class="social-icon" target="_blank"
+                        onclick="event.preventDefault(); window.location.href='instagram://user?username=efdourado'; setTimeout(() => { window.open('https://instagram.com/efdourado', '_blank'); }, 1000);">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -115,7 +121,7 @@ Stremline your orders, browse, and receive updates effortlessly
                 <div class="project-info">
                     <h3>—</h3>
                     <p>—</p>
-                    <a href="#" class="project-link">— →</a>
+                    <a href="#" class="project-link">View Case Study →</a>
                 </div>
             </article>
         </div>
