code clean up and minor fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="floating-nav">
         <div class="nav-brand">
-            <span class="gradient-text">❍</span>
+            <span class="gradient-text" id="scrollToTop">❍</span>
         </div>
         <div class="nav-links">
             <a href="#showcase" data-i18n="showcase"></a>
