code cleanup and minor fixes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         <div class="project-grid">
             <article class="project-card">
-                <a href="https://echo-trvw.onrender.com" target="_blank" rel="noopener noreferrer">
+                <a href="https://fs-memphis.onrender.com" target="_blank" rel="noopener noreferrer">
 
                     <div class="project-image">
                         <div class="placeholder-image">
@@ -87,8 +87,8 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3 data-i18n="project2_title"></h3>
-                        <p data-i18n="project2_description"></p>
+                        <h3 data-i18n="project1_title"></h3>
+                        <p data-i18n="project1_description"></p>
                         <a href="#" class="project-link" data-i18n="case_study"></a>
                     </div>
                 </a>
@@ -97,7 +97,7 @@
 
 
             <article class="project-card">
-                <a href="https://donuts-azure.vercel.app/mcdonaldsmodel" target="_blank" rel="noopener noreferrer">
+                <a href="http://fs-cairo.vercel.app" target="_blank" rel="noopener noreferrer">
                     <div class="project-image">
                         <div class="placeholder-image">
     
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3 data-i18n="project1_title"></h3>
-                        <p data-i18n="project1_description"></p>
+                        <h3 data-i18n="project2_title"></h3>
+                        <p data-i18n="project2_description"></p>
                         <a href="#" class="project-link" data-i18n="case_study"></a>
                     </div>
                 </a>
