--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025. <span data-i18n="rights_reserved"></span></p>
+                <p>&copy; 2025 Eduardo Dourado. <span data-i18n="rights_reserved"></span></p>
             </div>
         </div>
         </footer>
