feat(projects): Add images and repository links to cards

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             rel="noopener noreferrer"
           >
             <div class="project-image">
-              <div class="placeholder-image"></div>
+              <img src="assets/fs-memphis.png" alt="Memphis project screenshot">
+
               <div class="project-overlay">
                 <div class="tech-stack">
                   <span>Node.js</span>
@@ -109,7 +110,7 @@
             <div class="project-info">
               <h3 data-i18n="project1_title"></h3>
               <p data-i18n="project1_description"></p>
-              <a href="#" class="project-link" data-i18n="case_study"></a>
+              <a href="https://github.com/efdourado/fs-memphis" target="_blank" rel="noopener noreferrer" class="project-link" data-i18n="case_study"></a>
             </div>
           </a>
         </article>
@@ -120,8 +121,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <div class="project-image">
-              <div class="placeholder-image"></div>
+            <div class="project-image placeholder">
               <div class="project-overlay">
                 <div class="tech-stack">
                   <span>Prisma</span>
@@ -133,7 +133,7 @@
             <div class="project-info">
               <h3 data-i18n="project2_title"></h3>
               <p data-i18n="project2_description"></p>
-              <a href="#" class="project-link" data-i18n="case_study"></a>
+              <a href="https://github.com/efdourado/fs-cairo" target="_blank" rel="noopener noreferrer" class="project-link" data-i18n="case_study"></a>
             </div>
           </a>
         </article>
